# Chi_Tokenbar

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json
Ai_Assistant/: CONFIG.md  HANDOFF.md  TokenBar UX Spec v3.md  data-sources-findings.md  三樣態優化計畫-執行版.md
Ai_Assistant/archive/: ux-behavior-spec.md
atoll-egui/: Cargo.toml  README.md  collect-release.ps1
atoll-egui/src/: app.rs  main.rs  mock.rs
atoll-slint/: Cargo.toml  README.md  build.rs
atoll-slint/src/: main.rs  mock.rs
atoll-slint/ui/: atoll.slint
design/previews/: analytics-A-bento.html  analytics-B-summary.html  analytics-C-editorial.html  analytics-C1-detail.html  analytics-C1-magazine.html  analytics-C2-ledger.html  analytics-C3-annotated.html  brand-mark-quota-arc.html
design/refs/: atoll-brand-pages-artifact.html  atoll-share-artifact.html  atoll-share-preview.html  ds-A.md  ds-B.md  ds-C.md  ds-D.md  ds-E.md  ds-F.md  share-redesign-preview.html  stitch-prompts.md
docs/: CONFIG.md  DESIGN-SPEC-analytics-2lens.md  DESIGN-SPEC.md  FEEDBACK.md  HANDOFF.md  MEMORY-OPTIMIZATION-REVIEW.md  MEMORY-OPTIMIZATION.md  NATIVE-SHELL-EVAL.md  PLAN.md  ROUND-v070.md  ROUND-v080.md  ROUND-v090.md  ROUND-v100.md  TokenBar Live Island Prototype (standalone).html  data-sources-findings.md
docs/archive/: TokenBar UX Spec v2.md
docs/measurements/: README.md
docs/templates/: DESIGN-SPEC.template.md  PLAN.template.md  TICKET.template.md
docs/tickets/: T-903-brief.md  T-904-brief.md  T-906-brief.md  T-907-brief.md  T-912-brief.md  T-914-brief.md  (+26 more)
fixtures/: crosscheck-v1.json
scripts/: collect-installers.mjs  gen-noto-subset.mjs  gen-playfair-roman-subset.mjs  gen-playfair-subset.mjs  measure-memory.ps1  summarize-memory.ps1
src/: analytics-error.ts  analytics-height.test.ts  analytics-height.ts  analytics-request.test.ts  analytics-request.ts  analytics.test.ts  analytics.ts  colors.ts  contextmenu.ts  crosscheck.test.ts  datasource.test.ts  datasource.ts  fonts.css  format.test.ts  format.ts  heat3d.ts  i18n.test.ts  i18n.ts  icons.ts  island-aux.test.ts  island-aux.ts  island.test.ts  island.ts  main.ts  mock.ts  panel.test.ts  panel.ts  settings-controls.test.ts  settings-controls.ts  share-panel.test.ts  share-panel.ts  share-preview.test.ts  share-preview.ts  share.css  share.test.ts  share.ts  sources.test.ts  sources.ts  styles.css  theme.test.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  share-preview.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  burnrate.rs  config.rs  crosscheck_tests.rs  engine.rs  lib.rs  main.rs  model.rs  pricing.rs  ranking.rs  scan_cache.rs  scan_coord.rs
src-tauri/src/providers/: anthropic.rs  codex.rs  codex_live.rs  grok.rs  mod.rs
(+23 files in other folders)
