[package]
name = "atoll-egui"
version = "0.1.0-exp"
description = "Experimental Atoll shell on egui (no WebView2) — evaluation only"
edition = "2021"
publish = false

[[bin]]
name = "atoll-egui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
