[package]
name = "atoll"
version = "0.6.0"
description = "Atoll — AI coding quota runway monitor"
authors = ["you"]
edition = "2021"

[lib]
name = "atoll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
glob = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2", features = ["json", "tls", "native-certs"] }
